# LocationIQ-New

./: .env.example  .gitignore  README.md  package-lock.json  package.json  technical-spec.md
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ExactPinMap.tsx  ReportTokenPage.tsx  ReportView.tsx
apps/web/lib/: api.ts
docs/: README.md  api-data-model-spec.md  location-embeddings-s2vec.md  product-requirements.md  ux-report-ui-spec.md
infra/supabase/: README.md
report-templates/: README.md  india-signal-library.md  input-taxonomy.yaml  master-report-template.md  output-schema.json  purpose-modules.md  reader-first-v2-blueprint.md  reader-first-v4-blueprint.md  scoring-and-confidence.md
sample-reports/: README.md  pickleball-baner-pashan-report-layman.html  pickleball-baner-pashan-report.html  pickleball-hinjawadi-adjacent-plot-report-v3.html  pickleball-hinjawadi-adjacent-plot-report-v4.html  pickleball-hinjawadi-the-pickle-point-report-layman.html  pickleball-hinjawadi-the-pickle-point-report-v2.html
services/api/: pyproject.toml
services/api/app/: __init__.py  main.py  models.py
services/api/app/core/: config.py
services/api/app/repositories/: __init__.py  in_memory.py  supabase_repo.py
services/api/app/routers/: health.py  purpose_taxonomy.py  report_requests.py
services/api/app/services/: checkout_service.py  location_resolver.py  preview_generator.py  purpose_planner.py  report_generator.py
services/api/scripts/: check_supabase_schema.py
services/api/tests/: test_location_flow.py
(+4 files in other folders)
